--- a/package.json
+++ b/package.json
@@ -7,27 +7,31 @@
     "dev": "cross-env TS_NODE_PROJECT=\"tsconfig.json\" webpack serve"
   },
   "devDependencies": {
+    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/webpack": "^4.41.26",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.8",
     "nodemon": "^2.0.7",
+    "prettier": "^2.6.2",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "@types/mini-css-extract-plugin": "^1.2.2",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "css-loader": "^5.0.2",
-    "mini-css-extract-plugin": "^1.3.8",
-    "style-loader": "^2.0.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   }
 }
