--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "baseUrl": "src"
   }
 }
