--- a/package.json
+++ b/package.json
@@ -7,19 +7,29 @@
     "dev": "cross-env TS_NODE_PROJECT=\"tsconfig.json\" webpack serve"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@types/jest": "^27.4.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/webpack": "^4.41.26",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "concurrently": "^6.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "eslint": "^7.25.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.2.0",
+    "jest": "^27.0.0",
     "mini-css-extract-plugin": "^1.3.8",
     "nodemon": "^2.0.7",
     "prettier": "^2.6.2",
     "style-loader": "^2.0.0",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2",
@@ -28,10 +38,13 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "formik": "^2.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "redux-saga": "^1.1.3",
     "yup": "^0.32.11"
   }
 }
