--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "mini-css-extract-plugin": "^1.3.8",
     "nodemon": "^2.0.7",
     "prettier": "^2.6.2",
+    "react-svg-loader": "^3.0.3",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^8.0.17",
