--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "formik": "^2.2.9",
+    "i18next": "^21.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.16.9",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux-saga": "^1.1.3",
